Working on the Handwriting App. Going to move Ink Rendering to the render package.